Fixed align-items to center

--- a/index.css
+++ b/index.css
@@ -1,9 +1,10 @@
 .body {
-    height: 450px;
+    height: 100vh;
+    width: 100vw;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    align-items: flex-end;
+    align-items: center;
 }
 
 .container {
